// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query Copilot Feedback Modal snapshot test shoud render and match snapshot 1`] = `
<Modal
  isOpen={true}
>
  <Stack
    style={
      Object {
        "padding": 24,
      }
    }
  >
    <Stack
      horizontal={true}
      horizontalAlign="space-between"
    >
      <Text
        style={
          Object {
            "fontSize": 20,
            "fontWeight": 600,
            "marginBottom": 20,
          }
        }
      >
        Send feedback to Microsoft
      </Text>
      <CustomizedIconButton
        iconProps={
          Object {
            "iconName": "Cancel",
          }
        }
        onClick={[Function]}
      />
    </Stack>
    <Text
      style={
        Object {
          "fontSize": 14,
          "marginBottom": 14,
        }
      }
    >
      Your feedback will help improve the experience.
    </Text>
    <StyledTextFieldBase
      label="Description"
      multiline={true}
      onChange={[Function]}
      placeholder="Provide more details"
      required={true}
      rows={3}
      styles={
        Object {
          "root": Object {
            "marginBottom": 14,
          },
        }
      }
      value=""
    />
    <StyledTextFieldBase
      defaultValue="test query"
      label="Query generated"
      readOnly={true}
      styles={
        Object {
          "root": Object {
            "marginBottom": 14,
          },
        }
      }
    />
    <StyledChoiceGroup
      label="May we contact you about your feedback?"
      onChange={[Function]}
      options={
        Array [
          Object {
            "key": "yes",
            "text": "Yes, you may contact me.",
          },
          Object {
            "key": "no",
            "text": "No, do not contact me.",
          },
        ]
      }
      selectedKey="yes"
      styles={
        Object {
          "flexContainer": Object {
            "selectors": Object {
              ".ms-ChoiceField-field::after": Object {
                "marginTop": 4,
              },
              ".ms-ChoiceField-field::before": Object {
                "marginTop": 4,
              },
              ".ms-ChoiceFieldLabel": Object {
                "paddingLeft": 6,
              },
            },
          },
          "root": Object {
            "marginBottom": 14,
          },
        }
      }
    />
    <Text
      style={
        Object {
          "fontSize": 12,
          "marginBottom": 14,
        }
      }
    >
      By pressing submit, your feedback will be used to improve Microsoft products and services. IT admins for your organization will be able to view and manage your feedback data.
       
      <StyledLinkBase
        href=""
        target="_blank"
      >
        Privacy statement
      </StyledLinkBase>
    </Text>
    <Stack
      horizontal={true}
      horizontalAlign="end"
    >
      <CustomizedPrimaryButton
        onClick={[Function]}
        styles={
          Object {
            "root": Object {
              "marginRight": 8,
            },
          }
        }
      >
        Submit
      </CustomizedPrimaryButton>
      <CustomizedDefaultButton
        onClick={[Function]}
      >
        Cancel
      </CustomizedDefaultButton>
    </Stack>
  </Stack>
</Modal>
`;

exports[`Query Copilot Feedback Modal snapshot test should cancel submission 1`] = `
<Modal
  isOpen={false}
>
  <Stack
    style={
      Object {
        "padding": 24,
      }
    }
  >
    <Stack
      horizontal={true}
      horizontalAlign="space-between"
    >
      <Text
        style={
          Object {
            "fontSize": 20,
            "fontWeight": 600,
            "marginBottom": 20,
          }
        }
      >
        Send feedback to Microsoft
      </Text>
      <CustomizedIconButton
        iconProps={
          Object {
            "iconName": "Cancel",
          }
        }
        onClick={[Function]}
      />
    </Stack>
    <Text
      style={
        Object {
          "fontSize": 14,
          "marginBottom": 14,
        }
      }
    >
      Your feedback will help improve the experience.
    </Text>
    <StyledTextFieldBase
      label="Description"
      multiline={true}
      onChange={[Function]}
      placeholder="Provide more details"
      required={true}
      rows={3}
      styles={
        Object {
          "root": Object {
            "marginBottom": 14,
          },
        }
      }
      value=""
    />
    <StyledTextFieldBase
      defaultValue=""
      label="Query generated"
      readOnly={true}
      styles={
        Object {
          "root": Object {
            "marginBottom": 14,
          },
        }
      }
    />
    <StyledChoiceGroup
      label="May we contact you about your feedback?"
      onChange={[Function]}
      options={
        Array [
          Object {
            "key": "yes",
            "text": "Yes, you may contact me.",
          },
          Object {
            "key": "no",
            "text": "No, do not contact me.",
          },
        ]
      }
      selectedKey="yes"
      styles={
        Object {
          "flexContainer": Object {
            "selectors": Object {
              ".ms-ChoiceField-field::after": Object {
                "marginTop": 4,
              },
              ".ms-ChoiceField-field::before": Object {
                "marginTop": 4,
              },
              ".ms-ChoiceFieldLabel": Object {
                "paddingLeft": 6,
              },
            },
          },
          "root": Object {
            "marginBottom": 14,
          },
        }
      }
    />
    <Text
      style={
        Object {
          "fontSize": 12,
          "marginBottom": 14,
        }
      }
    >
      By pressing submit, your feedback will be used to improve Microsoft products and services. IT admins for your organization will be able to view and manage your feedback data.
       
      <StyledLinkBase
        href=""
        target="_blank"
      >
        Privacy statement
      </StyledLinkBase>
    </Text>
    <Stack
      horizontal={true}
      horizontalAlign="end"
    >
      <CustomizedPrimaryButton
        onClick={[Function]}
        styles={
          Object {
            "root": Object {
              "marginRight": 8,
            },
          }
        }
      >
        Submit
      </CustomizedPrimaryButton>
      <CustomizedDefaultButton
        onClick={[Function]}
      >
        Cancel
      </CustomizedDefaultButton>
    </Stack>
  </Stack>
</Modal>
`;

exports[`Query Copilot Feedback Modal snapshot test should close on cancel click 1`] = `
<Modal
  isOpen={false}
>
  <Stack
    style={
      Object {
        "padding": 24,
      }
    }
  >
    <Stack
      horizontal={true}
      horizontalAlign="space-between"
    >
      <Text
        style={
          Object {
            "fontSize": 20,
            "fontWeight": 600,
            "marginBottom": 20,
          }
        }
      >
        Send feedback to Microsoft
      </Text>
      <CustomizedIconButton
        iconProps={
          Object {
            "iconName": "Cancel",
          }
        }
        onClick={[Function]}
      />
    </Stack>
    <Text
      style={
        Object {
          "fontSize": 14,
          "marginBottom": 14,
        }
      }
    >
      Your feedback will help improve the experience.
    </Text>
    <StyledTextFieldBase
      label="Description"
      multiline={true}
      onChange={[Function]}
      placeholder="Provide more details"
      required={true}
      rows={3}
      styles={
        Object {
          "root": Object {
            "marginBottom": 14,
          },
        }
      }
      value=""
    />
    <StyledTextFieldBase
      defaultValue=""
      label="Query generated"
      readOnly={true}
      styles={
        Object {
          "root": Object {
            "marginBottom": 14,
          },
        }
      }
    />
    <StyledChoiceGroup
      label="May we contact you about your feedback?"
      onChange={[Function]}
      options={
        Array [
          Object {
            "key": "yes",
            "text": "Yes, you may contact me.",
          },
          Object {
            "key": "no",
            "text": "No, do not contact me.",
          },
        ]
      }
      selectedKey="yes"
      styles={
        Object {
          "flexContainer": Object {
            "selectors": Object {
              ".ms-ChoiceField-field::after": Object {
                "marginTop": 4,
              },
              ".ms-ChoiceField-field::before": Object {
                "marginTop": 4,
              },
              ".ms-ChoiceFieldLabel": Object {
                "paddingLeft": 6,
              },
            },
          },
          "root": Object {
            "marginBottom": 14,
          },
        }
      }
    />
    <Text
      style={
        Object {
          "fontSize": 12,
          "marginBottom": 14,
        }
      }
    >
      By pressing submit, your feedback will be used to improve Microsoft products and services. IT admins for your organization will be able to view and manage your feedback data.
       
      <StyledLinkBase
        href=""
        target="_blank"
      >
        Privacy statement
      </StyledLinkBase>
    </Text>
    <Stack
      horizontal={true}
      horizontalAlign="end"
    >
      <CustomizedPrimaryButton
        onClick={[Function]}
        styles={
          Object {
            "root": Object {
              "marginRight": 8,
            },
          }
        }
      >
        Submit
      </CustomizedPrimaryButton>
      <CustomizedDefaultButton
        onClick={[Function]}
      >
        Cancel
      </CustomizedDefaultButton>
    </Stack>
  </Stack>
</Modal>
`;

exports[`Query Copilot Feedback Modal snapshot test should get user unput 1`] = `
<Modal
  isOpen={false}
>
  <Stack
    style={
      Object {
        "padding": 24,
      }
    }
  >
    <Stack
      horizontal={true}
      horizontalAlign="space-between"
    >
      <Text
        style={
          Object {
            "fontSize": 20,
            "fontWeight": 600,
            "marginBottom": 20,
          }
        }
      >
        Send feedback to Microsoft
      </Text>
      <CustomizedIconButton
        iconProps={
          Object {
            "iconName": "Cancel",
          }
        }
        onClick={[Function]}
      />
    </Stack>
    <Text
      style={
        Object {
          "fontSize": 14,
          "marginBottom": 14,
        }
      }
    >
      Your feedback will help improve the experience.
    </Text>
    <StyledTextFieldBase
      label="Description"
      multiline={true}
      onChange={[Function]}
      placeholder="Provide more details"
      required={true}
      rows={3}
      styles={
        Object {
          "root": Object {
            "marginBottom": 14,
          },
        }
      }
      value="test user input"
    />
    <StyledTextFieldBase
      defaultValue=""
      label="Query generated"
      readOnly={true}
      styles={
        Object {
          "root": Object {
            "marginBottom": 14,
          },
        }
      }
    />
    <StyledChoiceGroup
      label="May we contact you about your feedback?"
      onChange={[Function]}
      options={
        Array [
          Object {
            "key": "yes",
            "text": "Yes, you may contact me.",
          },
          Object {
            "key": "no",
            "text": "No, do not contact me.",
          },
        ]
      }
      selectedKey="yes"
      styles={
        Object {
          "flexContainer": Object {
            "selectors": Object {
              ".ms-ChoiceField-field::after": Object {
                "marginTop": 4,
              },
              ".ms-ChoiceField-field::before": Object {
                "marginTop": 4,
              },
              ".ms-ChoiceFieldLabel": Object {
                "paddingLeft": 6,
              },
            },
          },
          "root": Object {
            "marginBottom": 14,
          },
        }
      }
    />
    <Text
      style={
        Object {
          "fontSize": 12,
          "marginBottom": 14,
        }
      }
    >
      By pressing submit, your feedback will be used to improve Microsoft products and services. IT admins for your organization will be able to view and manage your feedback data.
       
      <StyledLinkBase
        href=""
        target="_blank"
      >
        Privacy statement
      </StyledLinkBase>
    </Text>
    <Stack
      horizontal={true}
      horizontalAlign="end"
    >
      <CustomizedPrimaryButton
        onClick={[Function]}
        styles={
          Object {
            "root": Object {
              "marginRight": 8,
            },
          }
        }
      >
        Submit
      </CustomizedPrimaryButton>
      <CustomizedDefaultButton
        onClick={[Function]}
      >
        Cancel
      </CustomizedDefaultButton>
    </Stack>
  </Stack>
</Modal>
`;

exports[`Query Copilot Feedback Modal snapshot test should not render dont show again button 1`] = `
<Modal
  isOpen={false}
>
  <Stack
    style={
      Object {
        "padding": 24,
      }
    }
  >
    <Stack
      horizontal={true}
      horizontalAlign="space-between"
    >
      <Text
        style={
          Object {
            "fontSize": 20,
            "fontWeight": 600,
            "marginBottom": 20,
          }
        }
      >
        Send feedback to Microsoft
      </Text>
      <CustomizedIconButton
        iconProps={
          Object {
            "iconName": "Cancel",
          }
        }
        onClick={[Function]}
      />
    </Stack>
    <Text
      style={
        Object {
          "fontSize": 14,
          "marginBottom": 14,
        }
      }
    >
      Your feedback will help improve the experience.
    </Text>
    <StyledTextFieldBase
      label="Description"
      multiline={true}
      onChange={[Function]}
      placeholder="Provide more details"
      required={true}
      rows={3}
      styles={
        Object {
          "root": Object {
            "marginBottom": 14,
          },
        }
      }
      value=""
    />
    <StyledTextFieldBase
      defaultValue=""
      label="Query generated"
      readOnly={true}
      styles={
        Object {
          "root": Object {
            "marginBottom": 14,
          },
        }
      }
    />
    <StyledChoiceGroup
      label="May we contact you about your feedback?"
      onChange={[Function]}
      options={
        Array [
          Object {
            "key": "yes",
            "text": "Yes, you may contact me.",
          },
          Object {
            "key": "no",
            "text": "No, do not contact me.",
          },
        ]
      }
      selectedKey="yes"
      styles={
        Object {
          "flexContainer": Object {
            "selectors": Object {
              ".ms-ChoiceField-field::after": Object {
                "marginTop": 4,
              },
              ".ms-ChoiceField-field::before": Object {
                "marginTop": 4,
              },
              ".ms-ChoiceFieldLabel": Object {
                "paddingLeft": 6,
              },
            },
          },
          "root": Object {
            "marginBottom": 14,
          },
        }
      }
    />
    <Text
      style={
        Object {
          "fontSize": 12,
          "marginBottom": 14,
        }
      }
    >
      By pressing submit, your feedback will be used to improve Microsoft products and services. IT admins for your organization will be able to view and manage your feedback data.
       
      <StyledLinkBase
        href=""
        target="_blank"
      >
        Privacy statement
      </StyledLinkBase>
    </Text>
    <Stack
      horizontal={true}
      horizontalAlign="end"
    >
      <CustomizedPrimaryButton
        onClick={[Function]}
        styles={
          Object {
            "root": Object {
              "marginRight": 8,
            },
          }
        }
      >
        Submit
      </CustomizedPrimaryButton>
      <CustomizedDefaultButton
        onClick={[Function]}
      >
        Cancel
      </CustomizedDefaultButton>
    </Stack>
  </Stack>
</Modal>
`;

exports[`Query Copilot Feedback Modal snapshot test should record user contact choice no 1`] = `
<Modal
  isOpen={false}
>
  <Stack
    style={
      Object {
        "padding": 24,
      }
    }
  >
    <Stack
      horizontal={true}
      horizontalAlign="space-between"
    >
      <Text
        style={
          Object {
            "fontSize": 20,
            "fontWeight": 600,
            "marginBottom": 20,
          }
        }
      >
        Send feedback to Microsoft
      </Text>
      <CustomizedIconButton
        iconProps={
          Object {
            "iconName": "Cancel",
          }
        }
        onClick={[Function]}
      />
    </Stack>
    <Text
      style={
        Object {
          "fontSize": 14,
          "marginBottom": 14,
        }
      }
    >
      Your feedback will help improve the experience.
    </Text>
    <StyledTextFieldBase
      label="Description"
      multiline={true}
      onChange={[Function]}
      placeholder="Provide more details"
      required={true}
      rows={3}
      styles={
        Object {
          "root": Object {
            "marginBottom": 14,
          },
        }
      }
      value=""
    />
    <StyledTextFieldBase
      defaultValue=""
      label="Query generated"
      readOnly={true}
      styles={
        Object {
          "root": Object {
            "marginBottom": 14,
          },
        }
      }
    />
    <StyledChoiceGroup
      label="May we contact you about your feedback?"
      onChange={[Function]}
      options={
        Array [
          Object {
            "key": "yes",
            "text": "Yes, you may contact me.",
          },
          Object {
            "key": "no",
            "text": "No, do not contact me.",
          },
        ]
      }
      selectedKey="no"
      styles={
        Object {
          "flexContainer": Object {
            "selectors": Object {
              ".ms-ChoiceField-field::after": Object {
                "marginTop": 4,
              },
              ".ms-ChoiceField-field::before": Object {
                "marginTop": 4,
              },
              ".ms-ChoiceFieldLabel": Object {
                "paddingLeft": 6,
              },
            },
          },
          "root": Object {
            "marginBottom": 14,
          },
        }
      }
    />
    <Text
      style={
        Object {
          "fontSize": 12,
          "marginBottom": 14,
        }
      }
    >
      By pressing submit, your feedback will be used to improve Microsoft products and services. IT admins for your organization will be able to view and manage your feedback data.
       
      <StyledLinkBase
        href=""
        target="_blank"
      >
        Privacy statement
      </StyledLinkBase>
    </Text>
    <Stack
      horizontal={true}
      horizontalAlign="end"
    >
      <CustomizedPrimaryButton
        onClick={[Function]}
        styles={
          Object {
            "root": Object {
              "marginRight": 8,
            },
          }
        }
      >
        Submit
      </CustomizedPrimaryButton>
      <CustomizedDefaultButton
        onClick={[Function]}
      >
        Cancel
      </CustomizedDefaultButton>
    </Stack>
  </Stack>
</Modal>
`;

exports[`Query Copilot Feedback Modal snapshot test should record user contact choice yes 1`] = `
<Modal
  isOpen={false}
>
  <Stack
    style={
      Object {
        "padding": 24,
      }
    }
  >
    <Stack
      horizontal={true}
      horizontalAlign="space-between"
    >
      <Text
        style={
          Object {
            "fontSize": 20,
            "fontWeight": 600,
            "marginBottom": 20,
          }
        }
      >
        Send feedback to Microsoft
      </Text>
      <CustomizedIconButton
        iconProps={
          Object {
            "iconName": "Cancel",
          }
        }
        onClick={[Function]}
      />
    </Stack>
    <Text
      style={
        Object {
          "fontSize": 14,
          "marginBottom": 14,
        }
      }
    >
      Your feedback will help improve the experience.
    </Text>
    <StyledTextFieldBase
      label="Description"
      multiline={true}
      onChange={[Function]}
      placeholder="Provide more details"
      required={true}
      rows={3}
      styles={
        Object {
          "root": Object {
            "marginBottom": 14,
          },
        }
      }
      value=""
    />
    <StyledTextFieldBase
      defaultValue=""
      label="Query generated"
      readOnly={true}
      styles={
        Object {
          "root": Object {
            "marginBottom": 14,
          },
        }
      }
    />
    <StyledChoiceGroup
      label="May we contact you about your feedback?"
      onChange={[Function]}
      options={
        Array [
          Object {
            "key": "yes",
            "text": "Yes, you may contact me.",
          },
          Object {
            "key": "no",
            "text": "No, do not contact me.",
          },
        ]
      }
      selectedKey="yes"
      styles={
        Object {
          "flexContainer": Object {
            "selectors": Object {
              ".ms-ChoiceField-field::after": Object {
                "marginTop": 4,
              },
              ".ms-ChoiceField-field::before": Object {
                "marginTop": 4,
              },
              ".ms-ChoiceFieldLabel": Object {
                "paddingLeft": 6,
              },
            },
          },
          "root": Object {
            "marginBottom": 14,
          },
        }
      }
    />
    <Text
      style={
        Object {
          "fontSize": 12,
          "marginBottom": 14,
        }
      }
    >
      By pressing submit, your feedback will be used to improve Microsoft products and services. IT admins for your organization will be able to view and manage your feedback data.
       
      <StyledLinkBase
        href=""
        target="_blank"
      >
        Privacy statement
      </StyledLinkBase>
    </Text>
    <Stack
      horizontal={true}
      horizontalAlign="end"
    >
      <CustomizedPrimaryButton
        onClick={[Function]}
        styles={
          Object {
            "root": Object {
              "marginRight": 8,
            },
          }
        }
      >
        Submit
      </CustomizedPrimaryButton>
      <CustomizedDefaultButton
        onClick={[Function]}
      >
        Cancel
      </CustomizedDefaultButton>
    </Stack>
  </Stack>
</Modal>
`;

exports[`Query Copilot Feedback Modal snapshot test should render dont show again button and check it  1`] = `
<Modal
  isOpen={true}
>
  <Stack
    style={
      Object {
        "padding": 24,
      }
    }
  >
    <Stack
      horizontal={true}
      horizontalAlign="space-between"
    >
      <Text
        style={
          Object {
            "fontSize": 20,
            "fontWeight": 600,
            "marginBottom": 20,
          }
        }
      >
        Send feedback to Microsoft
      </Text>
      <CustomizedIconButton
        iconProps={
          Object {
            "iconName": "Cancel",
          }
        }
        onClick={[Function]}
      />
    </Stack>
    <Text
      style={
        Object {
          "fontSize": 14,
          "marginBottom": 14,
        }
      }
    >
      Your feedback will help improve the experience.
    </Text>
    <StyledTextFieldBase
      label="Description"
      multiline={true}
      onChange={[Function]}
      placeholder="Provide more details"
      required={true}
      rows={3}
      styles={
        Object {
          "root": Object {
            "marginBottom": 14,
          },
        }
      }
      value=""
    />
    <StyledTextFieldBase
      defaultValue="test query"
      label="Query generated"
      readOnly={true}
      styles={
        Object {
          "root": Object {
            "marginBottom": 14,
          },
        }
      }
    />
    <StyledChoiceGroup
      label="May we contact you about your feedback?"
      onChange={[Function]}
      options={
        Array [
          Object {
            "key": "yes",
            "text": "Yes, you may contact me.",
          },
          Object {
            "key": "no",
            "text": "No, do not contact me.",
          },
        ]
      }
      selectedKey="yes"
      styles={
        Object {
          "flexContainer": Object {
            "selectors": Object {
              ".ms-ChoiceField-field::after": Object {
                "marginTop": 4,
              },
              ".ms-ChoiceField-field::before": Object {
                "marginTop": 4,
              },
              ".ms-ChoiceFieldLabel": Object {
                "paddingLeft": 6,
              },
            },
          },
          "root": Object {
            "marginBottom": 14,
          },
        }
      }
    />
    <Text
      style={
        Object {
          "fontSize": 12,
          "marginBottom": 14,
        }
      }
    >
      By pressing submit, your feedback will be used to improve Microsoft products and services. IT admins for your organization will be able to view and manage your feedback data.
       
      <StyledLinkBase
        href=""
        target="_blank"
      >
        Privacy statement
      </StyledLinkBase>
    </Text>
    <StyledCheckboxBase
      checked={true}
      label="Don't show me this next time"
      onChange={[Function]}
      styles={
        Object {
          "label": Object {
            "paddingLeft": 0,
          },
          "root": Object {
            "marginBottom": 14,
          },
        }
      }
    />
    <Stack
      horizontal={true}
      horizontalAlign="end"
    >
      <CustomizedPrimaryButton
        onClick={[Function]}
        styles={
          Object {
            "root": Object {
              "marginRight": 8,
            },
          }
        }
      >
        Submit
      </CustomizedPrimaryButton>
      <CustomizedDefaultButton
        onClick={[Function]}
      >
        Cancel
      </CustomizedDefaultButton>
    </Stack>
  </Stack>
</Modal>
`;

exports[`Query Copilot Feedback Modal snapshot test should submit submission 1`] = `
<Modal
  isOpen={false}
>
  <Stack
    style={
      Object {
        "padding": 24,
      }
    }
  >
    <Stack
      horizontal={true}
      horizontalAlign="space-between"
    >
      <Text
        style={
          Object {
            "fontSize": 20,
            "fontWeight": 600,
            "marginBottom": 20,
          }
        }
      >
        Send feedback to Microsoft
      </Text>
      <CustomizedIconButton
        iconProps={
          Object {
            "iconName": "Cancel",
          }
        }
        onClick={[Function]}
      />
    </Stack>
    <Text
      style={
        Object {
          "fontSize": 14,
          "marginBottom": 14,
        }
      }
    >
      Your feedback will help improve the experience.
    </Text>
    <StyledTextFieldBase
      label="Description"
      multiline={true}
      onChange={[Function]}
      placeholder="Provide more details"
      required={true}
      rows={3}
      styles={
        Object {
          "root": Object {
            "marginBottom": 14,
          },
        }
      }
      value=""
    />
    <StyledTextFieldBase
      defaultValue=""
      label="Query generated"
      readOnly={true}
      styles={
        Object {
          "root": Object {
            "marginBottom": 14,
          },
        }
      }
    />
    <StyledChoiceGroup
      label="May we contact you about your feedback?"
      onChange={[Function]}
      options={
        Array [
          Object {
            "key": "yes",
            "text": "Yes, you may contact me.",
          },
          Object {
            "key": "no",
            "text": "No, do not contact me.",
          },
        ]
      }
      selectedKey="yes"
      styles={
        Object {
          "flexContainer": Object {
            "selectors": Object {
              ".ms-ChoiceField-field::after": Object {
                "marginTop": 4,
              },
              ".ms-ChoiceField-field::before": Object {
                "marginTop": 4,
              },
              ".ms-ChoiceFieldLabel": Object {
                "paddingLeft": 6,
              },
            },
          },
          "root": Object {
            "marginBottom": 14,
          },
        }
      }
    />
    <Text
      style={
        Object {
          "fontSize": 12,
          "marginBottom": 14,
        }
      }
    >
      By pressing submit, your feedback will be used to improve Microsoft products and services. IT admins for your organization will be able to view and manage your feedback data.
       
      <StyledLinkBase
        href=""
        target="_blank"
      >
        Privacy statement
      </StyledLinkBase>
    </Text>
    <Stack
      horizontal={true}
      horizontalAlign="end"
    >
      <CustomizedPrimaryButton
        onClick={[Function]}
        styles={
          Object {
            "root": Object {
              "marginRight": 8,
            },
          }
        }
      >
        Submit
      </CustomizedPrimaryButton>
      <CustomizedDefaultButton
        onClick={[Function]}
      >
        Cancel
      </CustomizedDefaultButton>
    </Stack>
  </Stack>
</Modal>
`;
